@@ -31,6 +31,7 @@
             "abs_path": "http://localhost:8000/test/../test/e2e/general-usecase/bundle.js.map",
             "filename": "test/e2e/general-usecase/bundle.js.map",
             "function": "<anonymous>",
+            "library_frame": true,
             "lineno": 1,
             "colno": 18
           },
@@ -38,6 +39,7 @@
             "abs_path": "http://localhost:8000/test/./e2e/general-usecase/bundle.js.map",
             "filename": "~/test/e2e/general-usecase/bundle.js.map",
             "function": "invokeTask",
+            "library_frame": false,
             "lineno": 1,
             "colno": 181
           },
